# kyber

./: README.md
docs/: 01-state-space.md  02-stability.md  03-hierarchical.md  04-adaptation.md  05-roadmap.md  cli-design.md  design.md  desktop-control-plan.md
docs/superpowers/plans/: 2026-05-28-kyber-cli.md
kyber/: Cargo.toml  README.md
kyber/src/: analysis.rs  cli.rs  codegen.rs  dialogue.rs  lib.rs  main.rs
kyber/src/agent/: adaptation.rs  controller.rs  llm.rs  mod.rs  observer.rs  planner.rs  runtime.rs  safety_layer.rs  tools.rs
kyber/src/agent/observer/: mod.rs  signal_fusion.rs
kyber/src/analysis/: mod.rs  stability.rs  validate.rs
kyber/src/codegen/: mod.rs  project_gen.rs  template_engine.rs  toml_gen.rs
kyber/src/config/: types.rs
kyber/src/dialogue/: interpreter.rs  mod.rs  rounds.rs
kyber/templates/base/: Cargo.toml.tera
kyber/templates/base/src/: safety.rs.tera  tools.rs.tera
kyber/templates/deep-verify/src/: controller.rs.tera  main.rs.tera  observer.rs.tera  verifier.rs.tera
kyber/templates/react/src/: controller.rs.tera  main.rs.tera  observer.rs.tera
