[package]
name = "kyber"
version = "0.1.0"
edition = "2021"
description = "Control-engineered Agent scaffolder — build trustworthy AI agents"

[[bin]]
name = "kyber"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tera = "1"
include_dir = "0.7"
colored = "2"
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
headless_chrome = "1"
